tests/fail/tree_borrows/protector-end-read-weak-memory.access.stderr
error: Undefined Behavior: Data race detected between (1) non-atomic write on thread `unnamed-ID` and (2) non-atomic read on thread `unnamed-ID` at ALLOC
  --> tests/fail/tree_borrows/protector-end-read-weak-memory.rs:LL:CC
   |
LL |     let xv = unsafe { *x };
   |                       ^^ (2) just happened here
   |
help: and (1) occurred earlier here
  --> tests/fail/tree_borrows/protector-end-read-weak-memory.rs:LL:CC
   |
LL |         *x = 43;
   |         ^^^^^^^
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: this is on thread `unnamed-ID`
   = note: stack backtrace:
           0: thread2
               at tests/fail/tree_borrows/protector-end-read-weak-memory.rs:LL:CC
           1: main::{closure#0}
               at tests/fail/tree_borrows/protector-end-read-weak-memory.rs:LL:CC
note: the last function in that backtrace got called indirectly due to this code
  --> tests/fail/tree_borrows/protector-end-read-weak-memory.rs:LL:CC
   |
LL |     let t2 = thread::spawn(move || thread2(xptr2, commr2));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

